--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,3 +21,11 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
+    - name: Releasing using Hub
+      uses: ShaunLWM/action-release-debugapk@master
+      env:
+       GITHUB_TOKEN: ${{ secrets.my_publish_token }}
+       APP_FOLDER: app
+       RELEASE_TITLE: New Build
