--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,20 +12,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
-    - name: Releasing using Hub
-      uses: ShaunLWM/action-release-debugapk@master
-      env:
-       GITHUB_TOKEN: ${{ secrets.my_publish_token }}
-       APP_FOLDER: app
-       RELEASE_TITLE: New Build
+      - name: my shell
+        run: |
+          pwd
+          ls
+          cd app
+          pwd
+          ls
+          
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
+#     - name: Build with Gradle
+#       run: ./gradlew build
+#     - name: Build Debug APK
+#       run: ./gradlew assembleDebug
+#     - name: Releasing using Hub
+#       uses: ShaunLWM/action-release-debugapk@master
+#       env:
+#        GITHUB_TOKEN: ${{ secrets.my_publish_token }}
+#        APP_FOLDER: app
+#        RELEASE_TITLE: New Build
